tests/should_succeed/syntax/04_assoc_prec.coma
module M_respect_prec
  use creusot.prelude.Any
  use creusot.int.UInt32
  use int.ComputerDivision
  use int.Int
  
  type tup2_u32_u32 = { f0: UInt32.t; f1: UInt32.t }
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec respect_prec (x: tup2_u32_u32) (return (x'0: ())) = (! bb0
    [ bb0 = return {_ret} ] [ & _ret: () = Any.any_l () ])
    [ return (result: ()) ->
    {[@stop_split] [@expl:respect_prec ensures] ([@stop_split] [@expl:respect_prec ensures #0] 5 = 3 -> 2 + 1 = 3)
      /\ ([@stop_split] [@expl:respect_prec ensures #1] ComputerDivision.div (5 * 3) 2 <> 4 * (40 + 1))
      /\ ([@stop_split] [@expl:respect_prec ensures #2] x.f0 = x.f1)}
      (! return {result}) ]
end
module M_respect_assoc
  use creusot.prelude.Any
  use int.Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec respect_assoc (return (x: ())) = (! bb0
    [ bb0 = return {_ret} ] [ & _ret: () = Any.any_l () ])
    [ return (result: ()) -> {[@stop_split] [@expl:respect_assoc ensures] 0 + 1 = 0} (! return {result}) ]
end
